# WebRTC-AI-Powered-Meeting-Platform

./: README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
ai/: .gitignore  README.md  early_patch.py  main.py  pyproject.toml  requirements.txt
ai/api/routes/: process.py
ai/app/core/: logging_config.py
ai/app/core/ai/: event_extractor.py  event_heuristics.py  summarizer.py
ai/app/core/audio/: cleaner.py  extractor.py
ai/app/core/llm/: base.py  factory.py
ai/app/core/llm/providers/: google_llm.py  ollama_llm.py  openai_llm.py
ai/app/core/messaging/: consumer.py  rabbitmq.py
ai/app/core/pipelines/: graph.py  state.py
ai/app/core/pipelines/nodes/: clean_audio.py  distribute.py  extract_audio.py  extract_events.py  refine_transcript.py  summarize.py  transcribe.py
ai/app/core/storage/: minio_client.py
ai/app/core/transcription/: early_patch.py  whisper_service.py
ai/mcp/: models.py  processor.py  router.py
ai/mcp/tools/: google_calendar.py  notion.py
backend/: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/src/: app.ts  index.ts
backend/src/config/: logger.ts
backend/src/media/: MediaRoomWrapper.ts  MediasoupWorkerManager.ts
backend/src/models/: ChatMessage.ts  Meeting.ts
frontend/: README.md
frontend/react/: .gitignore  Dockerfile  index.html  index.html.old  package.json  package.json.old  pnpm-lock.yaml  vite.config.ts
src/: app.ts  index.ts
src/config/: config.ts
src/media/: MediaRoomWrapper.ts  MediasoupWorkerManager.ts  TransportWrapper.ts
src/services/: RoomService.ts
(+27 files in other folders)
