[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.0.0",
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
    "fastapi==0.128.0",
    "faster-whisper>=1.0.0",
    "ffmpeg-python==0.2.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.0.0",
    "google-genai==1.61.0",
    "langchain==1.2.7",
    "langgraph==1.0.7",
    "notion-client>=2.0.0",
    "openai==2.16.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "requests==2.32.5",
    "uvicorn==0.40.0",
    "whisperx==3.7.6",
]
